<resources>
    <string name="app_name" translatable="false">NewsHub</string>
    <string name="developers_email" translatable="false">gb.android.juniors@rambler.ru</string>

    <!--    Examples for tools-->
    <string name="example_header_text" translatable="false">Эксперты американского CBS назвали рост рубля вопреки санкциям потрясающим</string>
    <string name="example_body_text" translatable="false">Рубль демонстрирует потрясающий рост и входит в список лучших мировых валют в этом году, несмотря на многочисленные антироссийские санкции Запада. Об этом заявили опрошенные американским телеканалом CBS эксперты.</string>
    <string name="example_resource_name_text" translatable="false">Комсомольская правда</string>
    <string name="example_news_publication_date" translatable="false">01.02.2022</string>
    <string name="example_first_news_header_text" translatable="false">Владимир Путин вновь прибыл в пострадавшую от потопа Иркутскую область</string>

    <!--    Category names-->
    <string name="main_category_name_text">Main</string>
    <string name="health_category_name_text">Health</string>
    <string name="sports_category_name_text">Sports</string>
    <string name="business_category_name_text">Business</string>
    <string name="entertainment_category_name_text">Entertainment</string>
    <string name="technology_category_name_text">Technology</string>
    <string name="science_category_name_text">Science</string>

    <!--    Country names-->
    <string name="country_russia">Russia</string>
    <string name="country_germany">Germany</string>
    <string name="country_england">England</string>
    <string name="country_australia">Australia</string>
    <string name="country_united_arab_emirates">United Arab Emirates</string>
    <string name="country_argentina">Argentina</string>
    <string name="country_austria">Austria</string>
    <string name="country_belgium">Belgium</string>
    <string name="country_bulgaria">Bulgaria</string>
    <string name="country_brazil">Brazil</string>
    <string name="country_canada">Canada</string>
    <string name="country_switzerland">Switzerland</string>
    <string name="country_china">China</string>
    <string name="country_colombia">Colombia</string>
    <string name="country_cuba">Cuba</string>
    <string name="country_czech_republic">Czech Republic</string>
    <string name="country_egypt">Egypt</string>
    <string name="country_france">France</string>
    <string name="country_united_kingdom">United Kingdom of Great Britain</string>
    <string name="country_greece">Greece</string>
    <string name="country_hong_kong">Hong Kong</string>
    <string name="country_hungary">Hungary</string>
    <string name="country_indonesia">Indonesia</string>
    <string name="country_ireland">Ireland</string>
    <string name="country_israel">Israel</string>
    <string name="country_india">India</string>
    <string name="country_italy">Italy</string>
    <string name="country_japan">Japan</string>
    <string name="country_korea">Korea Republic</string>
    <string name="country_lithuania">Lithuania</string>
    <string name="country_latvia">Latvia</string>
    <string name="country_morocco">Morocco</string>
    <string name="country_mexico">Mexico</string>
    <string name="country_malaysia">Malaysia</string>
    <string name="country_nigeria">Nigeria</string>
    <string name="country_netherlands">Netherlands</string>
    <string name="country_norway">Norway</string>
    <string name="country_new_zealand">New Zealand</string>
    <string name="country_philippines">Philippines</string>
    <string name="country_poland">Poland</string>
    <string name="country_portugal">Portugal</string>
    <string name="country_romania">Romania</string>
    <string name="country_serbia">Serbia</string>
    <string name="country_saudi_arabia">Saudi Arabia</string>
    <string name="country_sweden">Sweden</string>
    <string name="country_singapore">Singapore</string>
    <string name="country_slovenia">Slovenia</string>
    <string name="country_slovakia">Slovakia</string>
    <string name="country_thailand">Thailand</string>
    <string name="country_turkey">Turkey</string>
    <string name="country_taiwan">Taiwan, Province of China</string>
    <string name="country_ukraine">Ukraine</string>
    <string name="country_usa">USA</string>
    <string name="country_venezuela">Venezuela</string>
    <string name="country_south_africa">South Africa</string>

    <!--    Languages-->
    <string name="settings_language_english">English</string>
    <string name="settings_language_deutsch">Deutsch</string>
    <string name="settings_language_russian">Russian</string>
    <string name="settings_language_french">French</string>

    <!--    Details Fragment news-->
    <string name="news_source">Source:</string>
    <string name="publication_by">Publication by</string>
    <string name="publication_date">Publication date:</string>

    <!--    BottomNavigation names-->
    <string name="news">News</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>

    <!--    AlertDialog-->
    <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check internet connection.</string>
    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_title_stub">Undefined error</string>
    <string name="alert_first_visit_message">Some news sources may not be opened due to restrictions imposed by the legislation of your country.\nTo be able to read these resources, you can use any VPN service. *</string>
    <string name="alert_message_subtext">* Unless prohibited by the laws of your country.</string>
    <string name="attention">Attention !</string>

    <!--    Bookmarks Fragment news-->
    <string name="empty_bookmark_warning_text">No favourite articles</string>
    <string name="more_details">More details…</string>
    <string name="closing_warning">Are you sure you want to delete all bookmarks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    Settings Fragment-->
    <string name="settings_region_selection_hint_text">Select news region</string>
    <string name="settings_theme_hint_text">Choose an app theme</string>
    <string name="settings_theme_helper_text">* The app will restart to apply the setting.</string>
    <string name="settings_light_theme_name">Light mode</string>
    <string name="settings_dark_theme_name">Dark mode</string>
    <string name="settings_option_item_name_as_system">Same as in the system</string>
    <string name="settings_battery_theme_name">Battery saver theme</string>
    <string name="settings_language_hint_text">Select application language:</string>
    <string name="settings_divider_content_name">Content settings</string>
    <string name="settings_divider_interface_name">Interface settings</string>
    <string name="settings_save_button_name">Save</string>
    <string name="about_app_button_text">About application</string>

    <!--    Search Fragment-->
    <string name="search_titles">Search titles</string>
    <string name="enter_text">Enter text…</string>
    <string name="search">Search</string>
    <string name="empty_search_warning_text">Nothing found</string>
    <string name="details">Details</string>
    <string name="source">Source</string>

    <!--    Developers DialogFragment-->
    <string name="developers_header">NewsHub developers:</string>
    <string name="developers_list">Robilko Alexander\nMyasnikov Dmitry\nBronski Kirill\nPodobedov Andrey\nErshov Konstantin</string>
    <string name="connect_us">Connect with us</string>
    <string name="email_clients_not_found">There are no email clients installed.</string>
    <string name="mail_header_feedback" translatable="false">User feedback about app \"NewsHub\"</string>
    <string name="news_api_source">Source of news articles:</string>
    <string name="news_api_url" translatable="false">https://newsapi.org</string>

    <!--Ads-->
    <string name="no_ad_title">There should be ads here :(</string>

    <!--    Error messages-->
    <string name="unknown_error">Unknown Error!</string>
    <string name="error_timeout">The server is taking too much time to communicate. Try again later.</string>
    <string name="error_too_many_requests">Too many requests during this load.</string>
    <string name="error_connect">Failed to connect to the server.\nPerhaps the resource is blocked in your country.</string>
    <string name="error_failed_ssl_handshake">Failed to perform SSL handshake.</string>
    <string name="error_host_lookup">Server or proxy hostname lookup failed.</string>
    <string name="error_redirect_loop">Too many redirects.</string>
    <string name="error_unsupported_scheme">Unsupported scheme.</string>
    <string name="error_io">The server failed to communicate. Try again later."</string>

</resources>