<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ui.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/settings_appbar"
        style="@style/SmartAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_name"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:title="@string/settings"
            app:titleTextColor="@color/textLightPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_country_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/settings_region_selection_hint_text"
        android:textColorHint="@color/text_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_appbar"
        app:startIconDrawable="@drawable/ic_country"
        app:startIconTint="@color/icon_tint_color">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/select_country_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:selectAllOnFocus="true"
            android:textColor="@color/textDarkPrimary"
            tools:ignore="LabelFor"
            tools:text="@string/country_argentina" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_app_theme_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/settings_theme_hint_text"
        android:textColorHint="@color/text_hint_color"
        app:helperText="@string/settings_theme_helper_text"
        app:helperTextTextColor="@color/settings_warning_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_country_layout"
        app:startIconDrawable="@drawable/ic_theme"
        app:startIconTint="@color/icon_tint_color">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/select_app_theme_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/textDarkPrimary"
            tools:ignore="LabelFor"
            tools:text="@string/settings_dark_theme_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/select_app_language_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_24"
        android:hint="@string/settings_language_hint_text"
        android:textColorHint="@color/text_hint_color"
        app:helperText="@string/settings_theme_helper_text"
        app:helperTextTextColor="@color/settings_warning_helper_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_app_theme_layout"
        app:startIconDrawable="@drawable/ic_language_24"
        app:startIconTint="@color/icon_tint_color">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/select_app_language_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:editable="false"
            android:focusable="false"
            android:textColor="@color/textDarkPrimary"
            tools:ignore="LabelFor"
            tools:text="@string/settings_language_english" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
