<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/api_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/news_api_source"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:drawableTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/api_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/api_header">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_api_height"
            android:layout_margin="@dimen/margin_8"
            android:src="@drawable/ic_news_api_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_8"
            android:maxLines="5"
            android:text="@string/news_api_url"
            android:textIsSelectable="true"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/dev_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/developers_header"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_developers_24"
        app:drawableTint="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/api_layout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dev_header">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/logo_image_size"
            android:layout_height="@dimen/logo_image_size"
            android:layout_margin="@dimen/margin_8"
            android:src="@drawable/ic_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_8"
            android:maxLines="5"
            android:text="@string/developers_list"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:maxLines="5"
        android:text="@string/developers_email"
        android:textIsSelectable="true"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>