<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/alert_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:contentDescription="@string/attention"
        android:src="@drawable/ic_alert_24"
        app:layout_constraintBottom_toBottomOf="@+id/alert_header"
        app:layout_constraintEnd_toStartOf="@+id/alert_header"
        app:layout_constraintTop_toTopOf="@+id/alert_header"
        app:tint="@color/start_icon_tint_color" />

    <TextView
        android:id="@+id/alert_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:layout_marginStart="@dimen/margin_4"
        android:text="@string/attention"
        android:textColor="@color/text_hint_color"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/alert_vpn_icon"
        android:layout_width="@dimen/logo_image_size"
        android:layout_height="@dimen/logo_image_size"
        android:layout_margin="@dimen/margin_8"
        android:src="@drawable/ic_alert_vpn"
        app:layout_constraintBottom_toBottomOf="@+id/alert_message_text"
        app:layout_constraintEnd_toStartOf="@+id/alert_message_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/alert_message_text" />

    <TextView
        android:id="@+id/alert_message_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/margin_8"
        android:text="@string/alert_first_visit_message"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_header"
        app:layout_constraintStart_toEndOf="@+id/alert_vpn_icon" />

    <TextView
        android:id="@+id/alert_message_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8"
        android:gravity="center"
        android:text="@string/alert_message_subtext"
        android:textSize="@dimen/alert_subtext_size"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_message_text" />

</androidx.constraintlayout.widget.ConstraintLayout>