<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:clickable="true"
    android:focusable="true"
    tools:context=".bookmarks.ui.BookmarksFragment">

    <com.google.android.material.appbar.AppBarLayout
        style="@style/SmartAppBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            app:title="@string/search"
            app:titleTextColor="@color/textLightPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/search_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:hint="@string/enter_text"
            android:textColorHint="@color/indigo_400"
            app:endIconDrawable="@drawable/ic_search_24"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:selectAllOnFocus="true"
                android:textColor="@color/textDarkPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="2"
            tools:listitem="@layout/news_fragment_recycler_item" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/empty_search_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/empty_bookmarks_warning_image_size"
            android:layout_height="@dimen/empty_bookmarks_warning_image_size"
            android:layout_gravity="center"
            android:src="@drawable/ic_search_off_24"
            android:tint="@color/textDarkSecondary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/empty_search_warning_text"
            android:textColor="@color/textDarkSecondary"
            android:textSize="@dimen/common_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_warning_amber_96" />

</FrameLayout>